# smart-cooling

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements_dev.txt
.data/: ac cooling claude.csv  ac cooling claude.xlsx  fan cooling claude.csv  fan cooling claude.xlsx  fan cooling.xlsx
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
custom_components/smart_cooling/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  historical_replay.py  learning_module.py  manifest.json  sensor.py  services.yaml  strategy_engine.py  strings.json  thermal_model.py
custom_components/smart_cooling/translations/: en.json
data/: README.md
scenarios/: README.md  master_bedroom_cool_eve.yaml
scripts/: deploy-smart-cooling.ps1  diagnose-sensors.ps1  export-params.ps1  simulate_scenario.py  test_with_historical_data.py
tests/: conftest.py  test_historical_replay.py  test_learning_module.py  test_strategy_engine.py  test_thermal_model.py
